[tool.poetry]
name = "powerup"
version = "0.1.0"
description = "automacao de tarefas com python"
authors = ["kod <kodcore@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pyautogui = "^0.9.54"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
numpy = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
